fix according to the comment

--- a/project-management-app/src/app/core/components/header/create-button/create-button.component.html
+++ b/project-management-app/src/app/core/components/header/create-button/create-button.component.html
@@ -1,8 +1,5 @@
-<div *ngIf="!checkMobile(); else matIcon">
-  <button class="btn" mat-raised-button color="primary">Create new board</button>
-</div>
-<ng-template #matIcon>
-  <button class="btn-icon" mat-icon-button color="primary">
-    <mat-icon>note_add</mat-icon>
-  </button>
-</ng-template>
+<button class="btn" mat-raised-button color="primary">Create new board</button>
+
+<button class="btn--icon" mat-icon-button color="primary">
+  <mat-icon>note_add</mat-icon>
+</button>
