--- a/project-management-app/src/app/core/components/header/header/header.component.html
+++ b/project-management-app/src/app/core/components/header/header/header.component.html
@@ -2,5 +2,5 @@
   <app-logo></app-logo>
   <app-create-button></app-create-button>
   <app-user-box></app-user-box>
-  <mat-slide-toggle class="slide-toggle" (change)="onChange()">En\Ru</mat-slide-toggle>
+  <mat-slide-toggle class="slide-toggle" (change)="toggleLocalization()">En\Ru</mat-slide-toggle>
 </div>
