--- a/project-management-app/src/app/core/page/not-found/not-found.component.html
+++ b/project-management-app/src/app/core/page/not-found/not-found.component.html
@@ -1,4 +1,4 @@
-<div class="center-block">
-  <div class="not-found-img" [style.backgroundImage]="sourceImg"></div>
+<div class="block">
+  <div class="block__img" [style.backgroundImage]="sourceImg"></div>
   <a class="btn" mat-flat-button routerLink="">Back to home page</a>
 </div>
