--- a/project-management-app/src/app/core/components/header/logo/logo.component.html
+++ b/project-management-app/src/app/core/components/header/logo/logo.component.html
@@ -1,3 +1,3 @@
-<a routerLink="" class="header-logo">
-  <img [src]="imgSource" alt="Home button" class="logo-img" />
+<a routerLink="" class="header__logo">
+  <img [src]="imgSource" alt="Home button" class="logo__img" />
 </a>
