--- a/project-management-app/src/app/core/components/header/user-box/user-box.component.scss
+++ b/project-management-app/src/app/core/components/header/user-box/user-box.component.scss
@@ -7,18 +7,32 @@
 
 .btn {
   position: relative;
-  width: 5rem;
-  height: 5rem;
-  font-size: 5rem;
+  width: $user-button-size;
+  height: $user-button-size;
+  font-size: $user-button-size;
   display: flex;
   align-items: center;
   @include btn-shadow-style;
 
-  & * {
-    font-size: 5rem;
-    width: 5rem;
-    height: 5rem;
+  & .icon {
+    font-size: $user-button-size;
+    width: $user-button-size;
+    height: $user-button-size;
     display: flex;
     align-items: center;
+  }
+}
+
+::ng-deep {
+  .user-menu.mat-menu-panel .mat-menu-content:not(:empty) {
+    padding: 0;
+
+    .mat-menu-item:hover:not([disabled]),
+    .mat-menu-item.cdk-program-focused:not([disabled]),
+    .mat-menu-item.cdk-keyboard-focused:not([disabled]),
+    .mat-menu-item-highlighted:not([disabled]) {
+      transition: all 0.2s;
+      background-color: $theme-primary-transparent;
+    }
   }
 }
