--- a/project-management-app/src/app/core/page/not-found/not-found.component.scss
+++ b/project-management-app/src/app/core/page/not-found/not-found.component.scss
@@ -1,6 +1,6 @@
 @import "variables";
 
-.center-block {
+.block {
   position: absolute;
   left: 50%;
   top: 50%;
@@ -10,15 +10,15 @@
   flex-direction: column;
   gap: 2.5rem;
   width: 100%;
-}
 
-.not-found-img {
-  max-width: 90rem;
-  width: 100%;
-  height: 50rem;
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-position: center center;
+  &__img {
+    max-width: 90rem;
+    width: 100%;
+    height: 50rem;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center center;
+  }
 }
 
 .btn {
