--- a/project-management-app/src/app/main/pages/welcome/welcome.component.scss
+++ b/project-management-app/src/app/main/pages/welcome/welcome.component.scss
@@ -1,29 +1,22 @@
 @import "mixins";
 @import "variables";
 
-@import url('https://fonts.googleapis.com/css2?family=Niconne&family=Poppins:wght@500;700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
-
 %display-pattern {
   opacity: 0;
-  transition: opacity 0.2s 1.5s;
+  transition: opacity 0.5s 1.5s;
   z-index: 1000;
 }
 
 %normal-text-pattern {
-  font-size: 3rem;
-  line-height: 4rem;
   font-weight: 500;
   color: white;
   font-family: 'Poppins', sans-serif;
 }
 
-%after-text-pattern {
-  position: absolute;
-  font-size: 2.5rem;
-  line-height: 4rem;
-  left: 50%;
-  transform: translateX(-50%);
-  bottom: -28%;
+%opacity-pattern {
+  background-color: rgba(103, 58, 183, 0.5);
+  border-radius: 0.5vh;
+  padding: 0.5vh;
 }
 
 :host {
@@ -32,7 +25,7 @@
   overflow: hidden;
   width: 100%;
   height: 100%;
-  background: linear-gradient(to bottom right, #02C1CA, #415789);
+  background: $auth-purple-bg;
 }
 
 .welcome_main-img {
@@ -40,7 +33,7 @@
   @include background-image-block("../../../../assets/images/png/welcome-main-img.png", 100%, 0);
   left: 10%;
   transform: scale(0);
-  transition: transform 0.5s;
+  transition: transform 0.5s cubic-bezier(0.2, 0.19, 0.58, 1.24);
 }
 
 .welcome_main-img.active {
@@ -101,8 +94,6 @@
 
 h1 {
   position: absolute;
-  font-size: 7rem;
-  line-height: 8rem;
   font-weight: 700;
   color: white;
   font-family: 'Poppins', sans-serif;
@@ -118,6 +109,7 @@ p {
   text-align: right;
   @extend %normal-text-pattern;
   @extend %display-pattern;
+  @extend %opacity-pattern;
 
   &.active {
     opacity: 1;
@@ -128,11 +120,15 @@ p {
   position: absolute;
   @extend %flex-column-pattern;
   @extend %display-pattern;
-  row-gap: 1rem;
+
+  .welcome_team-img-container {
+    @extend %flex-column-pattern;
+  }
 
   p {
     position: relative;
     text-align: center;
+    background-color: transparent;
   }
 
   &.active {
@@ -148,33 +144,15 @@ p {
     }
 
     .welcome_ihar-img {
-      @include background-image-block("../../../../assets/images/jpeg/ihar-img.jpg", 100%, 0);
-
-      &::after {
-        content: "Ihar";
-        @extend %normal-text-pattern;
-        @extend %after-text-pattern;
-      }
+      @include background-image-block("../../../../assets/images/jpeg/ihar-img.jpg", 102%, 0);
     }
 
     .welcome_tetiana-img {
-      @include background-image-block("../../../../assets/images/jpeg/tetiana-img.jpg", 100%, 0);
-
-      &::after {
-        content: "Tetiana";
-        @extend %normal-text-pattern;
-        @extend %after-text-pattern;
-      }
+      @include background-image-block("../../../../assets/images/jpeg/tetiana-img.jpg", 102%, 0);
     }
 
     .welcome_ilia-img {
-      @include background-image-block("../../../../assets/images/jpeg/ilia-img.jpg", 100%, 0);
-
-      &::after {
-        content: "Ilia";
-        @extend %normal-text-pattern;
-        @extend %after-text-pattern;
-      }
+      @include background-image-block("../../../../assets/images/jpeg/ilia-img.jpg", 102%, 0);
     }
   }
 }
@@ -229,18 +207,23 @@ p {
   h1 {
     left: 20%;
     top: 4%;
+    font-size: 6vh;
+    line-height: 7vh;
   }
 
   p {
     right: 20%;
     top: 62%;
+    font-size: 2.8vh;
+    line-height: 3.7vh;
   }
 
   .welcome_team-container {
     width: 54vh;
-    height: 23vh;
+    height: 27vh;
     top: 31%;
     right: 14%;
+    row-gap: 3vh;
 
     p {
       top: auto;
@@ -254,7 +237,12 @@ p {
       .team-img {
         width: 17vh;
         height: 17vh;
-        border-radius: 17vh;
+        border-radius: 8.5vh;
+      }
+
+      .welcome_team-img-container {
+        width: 18vh;
+        height: 22vh;
       }
     }
   }
@@ -319,18 +307,23 @@ p {
   h1 {
     left: 10%;
     top: 11%;
+    font-size: 6vw;
+    line-height: 7vw;
   }
 
   p {
     right: 3%;
     top: 41%;
+    font-size: 3vw;
+    line-height: 4vw;
   }
 
   .welcome_team-container {
-    width: 44vw;
-    height: 19vw;
+    width: 47vw;
+    height: 27vw;
     top: 77%;
     right: 49%;
+    row-gap: 3vw;
 
     p {
      top: auto;
@@ -338,13 +331,18 @@ p {
     }
 
     .welcome_team-inner-container {
-      width: 44vw;
+      width: 48vw;
       height: 14vw;
 
       .team-img {
         width: 14vw;
         height: 14vw;
-        border-radius: 14vw;
+        border-radius: 7vw;
+      }
+
+      .welcome_team-img-container {
+        width: 15vw;
+        height: 20vw;
       }
     }
   }
