--- a/project-management-app/src/scss/base/_base.scss
+++ b/project-management-app/src/scss/base/_base.scss
@@ -1,4 +1,5 @@
 @import "variables";
+@import url('https://fonts.googleapis.com/css2?family=Niconne&family=Poppins:wght@500;700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
 * {
   font-family: "Roboto", sans-serif;
@@ -15,20 +16,13 @@ html {
   scroll-behavior: smooth;
   font-size: 62.5%; //1 rem = 10px
 
-  /* 1200px  */
-  @media only screen and (max-width: $desktop) {
-    font-size: 55%; //1rem=9px;
-  }
   /* 1024px  */
-  @media only screen and (max-width: $laptop) {
-    font-size: 45%; //1rem=7px;
-  }
-  /* 768px  */
   @media only screen and (max-width: $tablet) {
-    font-size: 37.5%; //1rem=6px;
+    font-size: 50%; //1rem=8px;
   }
+
   /* 480px  */
   @media only screen and (max-width: $mobile) {
-    font-size: 25%; //1rem=4px;
+    font-size: 43.75%; //1rem=7px;
   }
 }
