feat: add basic layout

--- a/project-management-app/src/scss/abstracts/_variables.scss
+++ b/project-management-app/src/scss/abstracts/_variables.scss
@@ -17,6 +17,7 @@ $color-pink: #d88dbd;
 $main-bg: #fbfbfd;
 $form-bg: #fff;
 $error-bg: #f44336;
+$board-main-bg: #bd93cd;
 
 //font colors
 $font-white: rgba(255, 255, 255, 0.95);
