--- a/project-management-app/src/app/boards/components/board/column/column.component.scss
+++ b/project-management-app/src/app/boards/components/board/column/column.component.scss
@@ -15,12 +15,15 @@
     padding-bottom: 10px;
     margin-bottom: 20px;
     border-bottom: 1px solid $font-white;
+    cursor: pointer;
   }
 
   &__title {
     font-size: 2rem;
     font-weight: 500;
+    line-height: 2.2rem;
     color: $font-white;
+    width: 100%;
 
     &__icon {
       margin-right: 10px;
