--- a/project-management-app/src/app/boards/shared/components/button-board-delete/button-board-delete.component.html
+++ b/project-management-app/src/app/boards/shared/components/button-board-delete/button-board-delete.component.html
@@ -1,3 +1,3 @@
-<button mat-stroked-button class="button-board">
+<button mat-stroked-button class="button-board-delete">
   <mat-icon>delete</mat-icon>
 </button>
