fix some issues

--- a/project-management-app/src/app/core/components/footer/footer/footer.component.scss
+++ b/project-management-app/src/app/core/components/footer/footer/footer.component.scss
@@ -3,7 +3,7 @@
 .footer {
   display: flex;
   width: 100%;
-  position: absolute;
+  position: relative;
   bottom: 0;
   background-color: $theme-primary;
   border-top: 1px solid $color-white-2;
