--- a/project-management-app/src/scss/abstracts/_variables.scss
+++ b/project-management-app/src/scss/abstracts/_variables.scss
@@ -6,8 +6,9 @@ $user-button-size: 5rem;
 
 //main colors
 $theme-primary: #673ab7;
-$theme-primary-transparent: #673ab766;
+$theme-primary-transparent: #673ab673;
 $theme-accent: #ffd740;
+$color-white: #fff;
 $color-white-2: #f4f3f6;
 $color-grey: #bdcbd4;
 $color-grey-dark: #747691;
