--- a/project-management-app/src/app/core/components/footer/authors/authors.component.scss
+++ b/project-management-app/src/app/core/components/footer/authors/authors.component.scss
@@ -25,6 +25,7 @@
     padding: 0.5rem 2rem;
     font-size: 2.2rem;
     backface-visibility: hidden;
+    color: $font-black;
   }
 
   @media only screen and(max-width: $tablet) {
