--- a/project-management-app/src/app/core/components/header/header/header.component.scss
+++ b/project-management-app/src/app/core/components/header/header/header.component.scss
@@ -1,14 +1,17 @@
 @import "variables";
 @import "mixins";
 
+$header-height: 9rem;
+
 :host {
   position: relative;
+  margin-bottom: $header-height;
 }
 
 .header {
-  position: relative;
+  position: fixed;
   z-index: 50;
-  padding: 1.5rem 3rem 2rem 3rem;
+  padding: 0 3rem;
   border-bottom: 2px solid $color-white-2;
   transition: all 0.3s ease-in-out;
   background-color: $form-bg;
@@ -16,16 +19,14 @@
   gap: 2rem;
   align-items: center;
   width: 100%;
+  height: $header-height;
   font-size: 2.4rem;
   font-weight: 300;
-  margin-top: -$header-indent;
 
   &.sticky {
     background-color: $color-white-2;
-    position: fixed;
-    padding: 1rem 3rem 1.5rem 3rem;
     box-shadow: 0px 4px 6px 2px $shadow-color;
-    top: $header-indent;
+    height: 7rem;
   }
 }
 
