--- a/project-management-app/src/app/main/pages/welcome/welcome.component.scss
+++ b/project-management-app/src/app/main/pages/welcome/welcome.component.scss
@@ -9,12 +9,12 @@
 
 %normal-text-pattern {
   font-weight: 500;
-  color: white;
+  color: $font-white;
   font-family: 'Poppins', sans-serif;
 }
 
 %opacity-pattern {
-  background-color: rgba(103, 58, 183, 0.5);
+  background-color: $theme-primary-transparent;
   border-radius: 0.5vh;
   padding: 0.5vh;
 }
@@ -24,7 +24,7 @@
   position: relative;
   overflow: hidden;
   width: 100%;
-  height: 100%;
+  flex-grow: 1;
   background: $auth-purple-bg;
 }
 
@@ -95,7 +95,7 @@
 h1 {
   position: absolute;
   font-weight: 700;
-  color: white;
+  color: $font-white;
   font-family: 'Poppins', sans-serif;
   @extend %display-pattern;
 
