--- a/project-management-app/src/app/boards/components/board/board.component.html
+++ b/project-management-app/src/app/boards/components/board/board.component.html
@@ -6,7 +6,9 @@
       </button>
       {{board?.title || title}}
     </h2>
-    <app-button-board-create text="Add column"></app-button-board-create>
+    <div class="board__btn--add-column">
+      <app-button-board-create text="Add column"></app-button-board-create>
+    </div>
   </div>
 
   <div class="board__content">
