--- a/project-management-app/src/scss/abstracts/_variables.scss
+++ b/project-management-app/src/scss/abstracts/_variables.scss
@@ -35,7 +35,7 @@ $laptop: 1024px;
 $desktop: 1200px;
 
 //backgrounds
-$auth-purple-bg: linear-gradient(318deg, $theme-primary 21%, $color-pink 100%);
+$purple-bg: linear-gradient(318deg, $theme-primary 21%, $color-pink 100%);
 $dialog-confirmation-bg: linear-gradient(
   318deg,
   $theme-primary 0%,
