--- a/project-management-app/src/styles.scss
+++ b/project-management-app/src/styles.scss
@@ -7,15 +7,7 @@
 @import "scss/components/components";
 
 body {
-  background-color: $main-bg;
-}
-
-.purple-bg {
-  background: $auth-purple-bg;
-}
-
-.white-bg {
-  background: $main-bg;
+  background: $purple-bg;
 }
 
 //autocomplete
