--- a/project-management-app/src/app/auth/components/auth-main/auth-main.component.html
+++ b/project-management-app/src/app/auth/components/auth-main/auth-main.component.html
@@ -1,4 +1,4 @@
-<div class="main" [appBgColor]="bgColor">
+<div class="main">
   <div class="main__abstract"></div>
   <div class="main__form">
     <ng-content></ng-content>
