--- a/project-management-app/src/app/boards/components/board/board.component.scss
+++ b/project-management-app/src/app/boards/components/board/board.component.scss
@@ -1,5 +1,10 @@
 @import "variables";
 
+:host,
+.board {
+  height: 100%;
+}
+
 .board {
   &__header {
     display: flex;
@@ -42,6 +47,7 @@
 
   &__content {
     width: 100%;
+    height: 100%;
     padding: 2rem 2rem 0;
     background-color: $board-main-bg;
     border-top: 2px solid $theme-accent;
