--- a/project-management-app/src/app/boards/components/board/column/column.component.scss
+++ b/project-management-app/src/app/boards/components/board/column/column.component.scss
@@ -1,4 +1,17 @@
 @import "variables";
+@import "mixins";
+
+:host {
+  opacity: 0;
+  transform: scaleY(1%);
+  transform-origin: top;
+  animation: slideColumn 0.6s ease-in forwards;
+  @for $i from 0 through 100 {
+    &:nth-of-type(#{$i}n) {
+      animation-delay: #{$i * 0.2}s;
+    }
+  }
+}
 
 .column {
   width: 100%;
@@ -9,9 +22,7 @@
   background-color: rgba(0, 0, 0, 0.3);
 
   &__header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+    @extend %flex-normal-pattern;
     padding-bottom: 10px;
     margin-bottom: 20px;
     border-bottom: 1px solid $font-white;
@@ -23,6 +34,8 @@
     line-height: 2.2rem;
     color: $font-white;
     width: 85%;
+    overflow: hidden;
+    white-space: nowrap;
 
     &__icon {
       margin-right: 10px;
@@ -33,6 +46,12 @@
       align-items: center;
       font-weight: 500;
       line-height: 2.2rem;
+    }
+
+    &__text {
+      text-overflow: ellipsis;
+      overflow: hidden;
+      white-space: nowrap;
     }
   }
 
@@ -81,6 +100,10 @@
   &__actions {
     display: flex;
     flex-direction: column;
+    opacity: 0;
+    transform: translateY(-50%);
+    transform-origin: top;
+    animation: slideInput 0.4s linear forwards;
   }
 
   &__btn {
@@ -103,5 +126,30 @@
     background-color: rgba(0, 0, 0, 0.3);
     border-radius: $border-radius;
     border: none;
+    opacity: 0;
+    transform: scaleX(1%);
+    transform-origin: left;
+    animation: slideInput 0.4s linear forwards;
+  }
+}
+
+@keyframes slideColumn {
+  to {
+    opacity: 1;
+    transform: scaleY(100%);
+  }
+}
+
+@keyframes slideInput {
+  to {
+    opacity: 1;
+    transform: scaleX(100%);
+  }
+}
+
+@keyframes slideActions {
+  to {
+    opacity: 1;
+    transform: translateY(100%);
   }
 }
