--- a/project-management-app/src/app/boards/components/board/column/task/task.component.html
+++ b/project-management-app/src/app/boards/components/board/column/task/task.component.html
@@ -1,6 +1,6 @@
 <mat-card class="task">
   <mat-card-title class="task__header">
-    <h4 class="task__title">{{task?.title || ''}}</h4>
+    <h4 class="task__title">{{task?.title || title}}</h4>
     <app-button-board-delete title="Delete task"></app-button-board-delete>
   </mat-card-title>
   <mat-card-content>
