--- a/project-management-app/src/app/boards/components/board/column/task/task.component.scss
+++ b/project-management-app/src/app/boards/components/board/column/task/task.component.scss
@@ -2,7 +2,7 @@
 @import "mixins";
 
 .task {
-  margin-bottom: 20px;
+  margin-bottom: 2rem;
   padding: 1.5rem;
   border-radius: $border-radius;
 
