--- a/project-management-app/src/app/boards/components/board/board.component.html
+++ b/project-management-app/src/app/boards/components/board/board.component.html
@@ -4,7 +4,7 @@
       <button mat-stroked-button class="board__btn--back">
         <mat-icon>arrow_back</mat-icon>
       </button>
-      {{board?.title || title}}
+      <span class="board__title__text">{{board?.title || title}}</span>
     </h2>
     <div class="board__btn--add-column">
       <app-button-board-create text="Add column"></app-button-board-create>
