--- a/project-management-app/src/app/boards/components/board/board.component.scss
+++ b/project-management-app/src/app/boards/components/board/board.component.scss
@@ -1,4 +1,5 @@
 @import "variables";
+@import "mixins";
 
 :host,
 .board {
@@ -7,26 +8,44 @@
 
 .board {
   &__header {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin-bottom: 15px;
+    @extend %flex-normal-pattern;
+
+    gap: 2rem;
+    margin-bottom: 1.5rem;
+    overflow: hidden;
 
     @media screen and (max-width: $mobile) {
       flex-direction: column;
       align-items: baseline;
-      gap: 10px;
+      gap: 1rem;
     }
   }
 
   &__title {
     display: flex;
     align-items: center;
-    gap: 20px;
+    gap: 2rem;
     font-size: 3rem;
     font-weight: 600;
     letter-spacing: 1px;
     color: $font-white;
+    width: 80%;
+
+    @media screen and (max-width: $tablet) {
+      width: 56%;
+    }
+
+    @media screen and (max-width: $mobile) {
+      width: 100%;
+    }
+
+    &__text {
+      width: 80%;
+
+      text-overflow: ellipsis;
+      white-space: nowrap;
+      overflow: hidden;
+    }
   }
 
   &__btn {
@@ -35,7 +54,7 @@
       height: 40px;
       border-radius: 100%;
       padding: 0;
-      background-color: rgba(0, 0, 0, 0.2);
+      background-color: $board-btn-bg-back;
     }
 
     &--add-column {
@@ -54,9 +73,11 @@
     border-radius: $border-radius;
 
     &--scrollable {
+      @include scrollbar(100%, 10px);
+
       height: 100%;
       width: 100%;
-      padding-bottom: 10px;
+      padding-bottom: 1rem;
       display: grid;
       grid-auto-columns: 300px;
       grid-auto-flow: column;
@@ -70,17 +91,6 @@
 
       @media screen and (max-width: $mobile) {
         grid-auto-columns: 271px;
-      }
-
-      &::-webkit-scrollbar {
-        height: 10px;
-        background-color: rgba(0, 0, 0, 0.1);
-        border-radius: $border-radius;
-      }
-
-      &::-webkit-scrollbar-thumb {
-        background-color: rgba(0, 0, 0, 0.4);
-        border-radius: $border-radius;
       }
     }
   }
