--- a/project-management-app/src/app/core/components/header/logo/logo.component.html
+++ b/project-management-app/src/app/core/components/header/logo/logo.component.html
@@ -1,3 +1,3 @@
-<a routerLink="" class="header__logo">
+<a routerLink="" class="header__logo" title="Home">
   <img [src]="imgSource" alt="Home button" class="logo__img" />
 </a>
