--- a/project-management-app/src/app/boards/pages/board-page/board-page.component.scss
+++ b/project-management-app/src/app/boards/pages/board-page/board-page.component.scss
@@ -1,14 +1,11 @@
 @import "variables";
 
 .board-page {
-  padding: 10px 3%;
-  height: calc(100vh - 210px);
-
-  @media screen and (max-width: $tablet) {
-    height: calc(100vh - 186px);
-  }
+  padding: 9.5rem 3% 7.3rem;
+  height: calc(100vh - 5.7rem);
 
   @media screen and (max-width: $mobile) {
-    height: calc(100vh - 243px);
+    height: calc(100vh - 16.3rem);
+    padding-bottom: 8.3rem;
   }
 }
