--- a/project-management-app/src/app/main/pages/main/main.component.html
+++ b/project-management-app/src/app/main/pages/main/main.component.html
@@ -1,4 +1,5 @@
 <app-header></app-header>
 <div class="main__container">
   <h1>Boards</h1>
+  <app-board *ngFor="let board of boards" [board]="board"></app-board>
 </div>
