feat: edit boards appearance

--- a/project-management-app/src/scss/abstracts/_variables.scss
+++ b/project-management-app/src/scss/abstracts/_variables.scss
@@ -18,6 +18,12 @@ $color-pink: #d88dbd;
 $main-bg: #fbfbfd;
 $form-bg: #fff;
 $error-bg: #f44336;
+$board-main-bg: #bd93cd;
+$board-column-bg: rgba(0, 0, 0, 0.3);
+$board-column-scrollbar: rgba(0, 0, 0, 0.1);
+$board-column-scrollbar-thumb: rgba(0, 0, 0, 0.3);
+$board-column-title-input: rgba(0, 0, 0, 0.3);
+$board-btn-bg-back: rgba(0, 0, 0, 0.2);
 
 //font colors
 $font-white: rgba(255, 255, 255, 0.95);
