--- a/project-management-app/src/app/main/pages/main/main.component.scss
+++ b/project-management-app/src/app/main/pages/main/main.component.scss
@@ -10,28 +10,46 @@
 
 @media screen and (orientation: landscape) {
   .main__container {
-    background: url("../../../../assets/images/png/board-back-landscape.png"), linear-gradient(318deg, $theme-primary 21%, $theme-primary-transparent 100%);
+    background: url("../../../../assets/images/png/board-back-landscape.png"), $theme-primary-transparent;
   }
 }
 
 @media screen and (orientation: portrait) {
   .main__container {
-    background: url("../../../../assets/images/png/board-back-portrait.png"), linear-gradient(318deg, $theme-primary 21%, $theme-primary-transparent 100%);
+    background: url("../../../../assets/images/png/board-back-portrait.png"), $theme-primary-transparent;
   }
 }
 
 .main__container {
+  position: relative;
   flex-grow: 1;
-  //background: linear-gradient(318deg, $theme-primary 21%, $theme-primary-transparent 100%);
+  @extend %flex-column-pattern;
   background-position: bottom;
   background-size: cover;
-  @extend %flex-column-pattern;
 
   h1 {
     @extend %normal-text-pattern;
+    margin: 1rem;
+    font-size: 5rem;
+    line-height: 9rem;
+    padding-left: 6rem;
+    padding-right: 6rem;
+    border-radius: 1rem;
+    background-color: $theme-primary-transparent;
     color: white;
-    font-size: 6rem;
-    line-height: 7rem;
+  }
+
+  .main__inner-container {
+    position: absolute;
+    width: calc(100% - 8rem);
+    height: calc(100% - 15rem);
+    @extend %flex-column-pattern;
+    @include scrollbar(10px, 100%);
+    margin: 11rem 4rem 4rem 4rem;
+    padding: 1rem 4rem 4rem 4rem;
+    row-gap: 3rem;
+    overflow-x: hidden;
+    overflow-y: scroll;
   }
 
 }
