--- a/project-management-app/src/scss/abstracts/_mixins.scss
+++ b/project-management-app/src/scss/abstracts/_mixins.scss
@@ -27,6 +27,12 @@
   justify-content: space-between;
 }
 
+%flex-centre-pattern {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 @mixin btn-shadow-style {
   box-shadow: 1px 1px 6px 1px $shadow-color;
   transition: all 0.3s ease-in-out;
@@ -39,5 +45,23 @@
   &:active {
     transform: translateY(0);
     box-shadow: 1px 1px 6px 1px $shadow-color;
+  }
+}
+
+@mixin scrollbar($width: 100%, $height: 100%) {
+  &::-webkit-scrollbar-button {
+    display: none;
+  }
+
+  &::-webkit-scrollbar {
+    width: $width;
+    height: $height;
+    background-color: $board-column-scrollbar;
+    border-radius: $border-radius;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background-color: $board-column-scrollbar-thumb;
+    border-radius: $border-radius;
   }
 }
