--- a/project-management-app/src/app/main/pages/test/test.component.html
+++ b/project-management-app/src/app/main/pages/test/test.component.html
@@ -23,7 +23,7 @@
         <ul>
           <li
             *ngFor="let column of board.columns"
-            style="background-color: #ccc; margin-bottom: 10px; padding: 5px"
+            style="background-color: rgb(109, 163, 102); margin-bottom: 10px; padding: 5px"
           >
             <h3>{{ column.title }}</h3>
             <button mat-button color="warn" (click)="deleteColumn(board.id, column.id)">
